# semver-trust-go

./: .gitignore  .gitleaks.toml  .goreleaser.yaml  .hygiene-fixture  .markdownlint.yaml  .markdownlintignore  .yamlfmt.yaml  AGENTS.md  CONTRIBUTING.md  README.md  Taskfile.yml  devbox.json  go.mod  go.sum  pyproject.toml
.claude/commands/: prime-go-semver.md  prime-spec.md
.githooks/: commit-msg
.github/: dependabot.yml
.github/rulesets/: README.md  branch-main-review-gate.json
.github/workflows/: ci.yml  commit-hygiene.yml  release.yml  semver-trust-verify.yml
.semver-trust/: allowed_signers  attestation_signers  gpg-keyring.asc  policy.toml
cmd/semver-trust/: attest.go  attest_test.go  docs.go  doctor.go  doctor_test.go  enroll.go  enroll_test.go  main.go  main_test.go  plain.go  plain_test.go  policy.go  policy_test.go  promote.go  recurring_test.go  release.go  release_ancestry_test.go  release_test.go  release_v02_test.go  root.go  setup.go  setup_test.go  supersede_test.go  verify.go  verify_test.go  write.go
conformance/: README.md  conformance.go  manifest.json  manifest_test.go
docs/: README.md  architecture.md  concepts.md  conformance-coverage.md  first-release.md  implementation-plan.md  recurring-release-runbook.md  release-runbook.md
docs/analysis/: 2026-07-19-cli-bootstrap-family.md  2026-07-21-release-ceremony-family.md
docs/cli/: semver-trust.md  semver-trust_attest.md  semver-trust_doctor.md  (+19 more)
evidence/: evidence.go
graph/: graph.go
scripts/: build-fixtures.sh  merge-pr.sh  sync-conformance.py
tools/: README.md  go.mod  go.sum
(+170 files in other folders)
